/form trzeba z palca bo przekierowanie nie działa, ale zapisuje do bazy

--- a/voting-flask-application-master/voting-flask-application-master/form.html
+++ b/voting-flask-application-master/voting-flask-application-master/form.html
@@ -1,6 +1,6 @@
 {% block body %}
 
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
   <title>Ankieta dot. raka szyjki macicy</title>
@@ -240,16 +240,12 @@
                       <?-- 10 pytanie -->
                         <div class="form-group">
                             <label for="wf" class="title"> Przypomnij sobie okres ostatnich 3 miesięcy. W ciągu tego okresu, jak często uprawiałaś aktywność fizyczną?
-                            <label class="radio">raz w miesiącu lub rzadziej
-                              <input type="radio"  name="wf" value="1pmth" required>
+                            <label class="radio">raz w tygodniu lub częściej
+                              <input type="radio"  name="wf" value="1pwk" required>
                               <span class="checkround"></span>
                               </label>
-                            <label class="radio">kilka razy w miesiącu
-                              <input type="radio"  name="wf" value="somepmth">
-                              <span class="checkround"></span>
-                              </label>
-                            <label class="radio"> kilka razy w tygodniu
-                              <input type="radio"  name="wf" value="somepwk">
+                            <label class="radio">rzadziej niż raz w tygodniu
+                              <input type="radio"  name="wf" value="less">
                               <span class="checkround"></span>
                             </label>
                         </div>
